...
                                    </label>
                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qQc-61-tEA">
                                        <accessibility key="accessibilityConfiguration" hint="How many players?" identifier="playerNbWheelPicker" label="Player Number"/>
                                    </pickerView>
                                </subviews>
...
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NbPlayers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jEf-dE-w79">
                                <accessibility key="accessibilityConfiguration" identifier="playerModeLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player currently playing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="es0-uw-afb">
                                        <accessibility key="accessibilityConfiguration" identifier="curPlayerLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                            </button>
                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vjG-vV-jUq">
                                                <accessibility key="accessibilityConfiguration" identifier="but3matches" label="Button for 3 matches"/>
                                                <state key="normal" title="3"/>
                                                <connections>
...
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="su3-jy-O2v">
                                        <accessibility key="accessibilityConfiguration" identifier="main_vc_settings_button"/>
                                        <state key="normal" title="Settings"/>
                                        <connections>
...
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="20" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vk7-D1-6R1">
                                <accessibility key="accessibilityConfiguration" identifier="max_matches_text_edit"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            </textField>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9rf-8r-gJM">
                                <accessibility key="accessibilityConfiguration" identifier="rand_start_switch"/>
                                <connections>
                                    <action selector="ui_switchChanged" destination="aFc-Qn-hlP" eventType="valueChanged" id="ePk-NE-nLl"/>
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxx-FV-lFp">
                                <accessibility key="accessibilityConfiguration" identifier="sett_CV_back_button"/>
                                <state key="normal" title="Back"/>
                                <connections>
...
